[gd_scene load_steps=14 format=2]

[ext_resource path="res://ProceduralGeneration/Factory/Furniture/portal_to_hell.png" type="Texture" id=1]
[ext_resource path="res://ProceduralGeneration/Factory/Furniture/Portal.gd" type="Script" id=2]
[ext_resource path="res://ProceduralGeneration/Factory/Furniture/portal_base.png" type="Texture" id=3]
[ext_resource path="res://Audio/Sound Effects/sniper_activate.wav" type="AudioStream" id=4]
[ext_resource path="res://ProceduralGeneration/!Classes/FurnitureHurtbox.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27, 17 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 2 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.5
height = 39.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19, 0.75 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "activate"
length = 3.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2, 1, 0, 3, 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.0
height = 2.0

[node name="Portal" type="StaticBody2D"]
script = ExtResource( 2 )
collision_check_shape = SubResource( 4 )
destruction_size = 0.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -17 )
texture = ExtResource( 1 )
hframes = 6

[node name="BaseSprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
z_index = -2
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -14, -1 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 14, -1 )
shape = SubResource( 2 )

[node name="NoBuild" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoBuild"]
visible = false
position = Vector2( 0, 0.5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="PortalTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalTrigger"]
visible = false
position = Vector2( 0, -8.75 )
shape = SubResource( 5 )

[node name="ActivateSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/activate = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -15, -4 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 15, -4 )
shape = SubResource( 8 )

[connection signal="area_entered" from="PortalTrigger" to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_activate_animation_finished"]
